Update Pengalaman dan Pendidkan

--- a/portofolio.html
+++ b/portofolio.html
@@ -236,7 +236,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-date">2022 - 2023</div>
-                <h3 class="timeline-title">Networkk Engineering</h3>
+                <h3 class="timeline-title">Network Engineering</h3>
                 <div class="timeline-subtitle">PT Telekomunikasi Indonesia Lubuk Pakam</div>
                 <p class="timeline-desc">
                     Berkolaborasi dengan tim desain UI/UX untuk mengimplementasikan mockup menjadi kode yang fungsional.
